<resources>
    <string name="app_name">查字典</string>
    <string name="mainActivityTitle">查字典</string>
    <string name="chineseResultActivityTitle">查询结果</string>
    <string name="newWordListActivityTitle">生词本</string>
    <string name="webSearchActivityTitle">详解</string>
    <string name="BAIDU_HANYU_ZICI_URL">https://hanyu.baidu.com/zici/s?wd=</string>
    <string name="BAIDU_HANYU_SEARCH_URL">https://hanyu.baidu.com/s?wd=</string>
    <string name="BAIDU_HANYU_HOME_URL">https://hanyu.baidu.com/</string>
    <string name="delete_selected_text">删除选中</string>
    <string name="delete_all_text">清空所有</string>
    <string name="sort_type_text">排序方式</string>
    <string name="sort_add_time_text">按添加时间排序</string>
    <string name="sort_count_text">按查看次数排序</string>
    <string name="refresh_web_text">重载</string>
    <string name="list_display_type_text">切换风格</string>
    <string name="shp_settings_name">settings</string>
    <string name="shp_display_type">shp_display_type</string>
    <string name="sort_pinyin_text">按拼音排序</string>
    <string name="shp_order_type">shp_order_type</string>
    <string name="camera_image_description">拍照图片</string>
    <string name="button_capture_again_text">再拍一张</string>
    <string name="button_scan_text">扫描汉字</string>
    <string name="button_new_words_text">生词本</string>
    <string name="textview_pinyin_default_text">zi</string>
    <string name="textview_zuci_default_text">生字,写字</string>
    <string name="textview_chinese_default_text">字</string>
    <string name="list_index_default_text">1</string>
    <string name="imageview_right_icon_description">right icon</string>
    <string name="search_bar_menu_title">Search</string>
    <string name="menu_open_in_browser_text">从浏览器打开</string>
    <string name="copyright_text">©2020 强子 All rights reserved.</string>
    <string name="copyright_short_text">©2020 by强子</string>
    <string name="aboutAppActivityTitle">关于</string>
    <string name="intention_text">帮助孩子们提高学习效率，快快完成学习任务，多多去户外运动！多多享受童年的快乐吧！</string>
    <string name="app_description_text">使用摄像头扫描查生字；\n语音朗读、释义、组词；\n生字本可以收藏查过的生字；\n通过语音识别查字、词、成语；\n查询范围扩展百度百科知识。</string>
    <string name="thanks_text">感谢您的使用与支持！\n感谢百度AI平台的免费资源！</string>
    <string name="app_version_check_url">http://www.facevall.com/source/file/download/search_dictionary_release.json</string>
    <string name="click_voice_hint_text">点一下，说出你要查的内容吧！</string>
    <string name="BAIDU_BAIKE_ITEM_URL">https://baike.baidu.com/item/</string>
</resources>
