<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search_new_word"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_delete_selected"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_selected_text"
        android:visible="false" />
    <item
        android:id="@+id/menu_delete_all"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/delete_all_text"></item>
    <item
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_type_text">
        <menu>
            <item
                android:id="@+id/menu_sort_add_time"
                android:title="@string/sort_add_time_text" />
            <item
                android:id="@+id/menu_sort_pinyin"
                android:title="@string/sort_pinyin_text" />
            <item
                android:id="@+id/menu_sort_count"
                android:title="@string/sort_count_text" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_list_display_type"
        android:title="@string/list_display_type_text"/>
</menu>